# openvm-memory-profiler-examples

./: Cargo.toml  README.md  docker-compose.yml
examples/: prometheus-push.rs  prometheus-scrape.rs
prometheus-config/: scrape-config.yml
src/: lib.rs
